@@ -434,6 +434,9 @@
 	
 	define('ZBX_GUEST_USER','guest');
 
+/* Define if your logs are in non-standard format */
+/*	define('ZBX_LOG_ENCODING_DEFAULT', 'Shift_JIS');*/
+
 	global $_GET, $_POST, $_COOKIE, $_REQUEST;
 
 /* Support for PHP5. PHP5 does not have $HTTP_..._VARS */
